exports[`test renders appropriately 1`] = `
<UpdateAccountCreditCard
  authenticity_token="csrf_token"
  stripe_customer_id_present={true} />
`;

exports[`test renders appropriately without Stripe customer ID 1`] = `
<UpdateAccountCreditCard
  authenticity_token="csrf_token"
  stripe_customer_id_present={false} />
`;
